// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`happy 1`] = `
Array [
  "/home/deyan/repos/services/packages/helpers-fn/src/index.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/create-benchmark.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/create-complex-benchmark.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/default-to.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/default-to.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/exec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/get-staged-files.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/get-staged-files.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/monitor.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/monitor.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/parse-hjson.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/parse-hjson.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/run-tests.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/run-tests.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/scan-folder.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/scan-folder.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/translate.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/translate.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/constants.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/log.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/log.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/tests/benchmark-utils.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/tests/create-benchmark.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/utils/parse-monitor-data.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/utils/parse-monitor-data.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/_modules/big-log.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/_modules/box.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/_modules/colorized-background.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/_modules/colorized-text.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/_modules/log-object.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/_modules/log-with-icon.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/_modules/separator.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/tests/benchmarks/allPass.js",
]
`;

exports[`with exclude 1`] = `
Array [
  "/home/deyan/repos/services/packages/helpers-fn/src/index.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/create-benchmark.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/create-complex-benchmark.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/default-to.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/default-to.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/exec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/get-staged-files.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/get-staged-files.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/monitor.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/monitor.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/parse-hjson.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/parse-hjson.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/run-tests.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/run-tests.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/scan-folder.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/scan-folder.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/translate.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/translate.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/tests/benchmark-utils.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/tests/create-benchmark.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/utils/parse-monitor-data.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/utils/parse-monitor-data.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/tests/benchmarks/allPass.js",
]
`;

exports[`with filter 1`] = `
Array [
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/default-to.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/get-staged-files.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/monitor.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/parse-hjson.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/run-tests.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/scan-folder.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/translate.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/log/log.spec.js",
  "/home/deyan/repos/services/packages/helpers-fn/src/exported/utils/parse-monitor-data.spec.js",
]
`;
